fix grafana dashboards on mobile devices

--- a/conf/html/grafana/css/grafana.css
+++ b/conf/html/grafana/css/grafana.css
@@ -1,3 +1,7 @@
+.panel.panel--solo {
+    position: fixed !important;
+}
+
 .graph-legend {
     margin: 0;
 }
